--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "2.0.0-db82906",
+  "version": "2.0.0-a01a54c",
   "description": "",
   "main": "index.js",
   "jsnext:main": "esm/index.js",
@@ -9,6 +9,10 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "5.0.0-beta.6",
-    "@angular/core": "2.0.0-db82906"
+    "@angular/core": "2.0.0-a01a54c"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/angular/angular.git"
   }
 }
