--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "2.2.2-9c95474",
+  "version": "2.3.0-beta.0-86ffa88",
   "description": "Angular - the http service",
   "main": "bundles/http.umd.js",
   "module": "index.js",
@@ -9,8 +9,8 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "5.0.0-beta.12",
-    "@angular/core": "2.2.2-9c95474",
-    "@angular/platform-browser": "2.2.2-9c95474"
+    "@angular/core": "2.3.0-beta.0-86ffa88",
+    "@angular/platform-browser": "2.3.0-beta.0-86ffa88"
   },
   "repository": {
     "type": "git",
