--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "2.3.0-beta.0-627282d",
+  "version": "2.3.0-beta.0-c4bbafc",
   "description": "Angular - the http service",
   "main": "bundles/http.umd.js",
   "module": "index.js",
@@ -8,9 +8,9 @@
   "author": "angular",
   "license": "MIT",
   "peerDependencies": {
-    "rxjs": "5.0.0-beta.12",
-    "@angular/core": "2.3.0-beta.0-627282d",
-    "@angular/platform-browser": "2.3.0-beta.0-627282d"
+    "rxjs": "5.0.0-rc.4",
+    "@angular/core": "2.3.0-beta.0-c4bbafc",
+    "@angular/platform-browser": "2.3.0-beta.0-c4bbafc"
   },
   "repository": {
     "type": "git",
