--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "2.3.0-rc.0-cf52284",
+  "version": "2.3.0-13b41bd",
   "description": "Angular - the http service",
   "main": "bundles/http.umd.js",
   "module": "index.js",
@@ -9,8 +9,8 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "5.0.0-rc.4",
-    "@angular/core": "2.3.0-rc.0-cf52284",
-    "@angular/platform-browser": "2.3.0-rc.0-cf52284"
+    "@angular/core": "2.3.0-13b41bd",
+    "@angular/platform-browser": "2.3.0-13b41bd"
   },
   "repository": {
     "type": "git",
