--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.0.0-beta.0-e49c7fa",
+  "version": "4.0.0-beta.0-171a9bd",
   "description": "Angular - the http service",
   "main": "bundles/http.umd.js",
   "module": "index.js",
@@ -8,9 +8,9 @@
   "author": "angular",
   "license": "MIT",
   "peerDependencies": {
-    "rxjs": "5.0.0-rc.4",
-    "@angular/core": "4.0.0-beta.0-e49c7fa",
-    "@angular/platform-browser": "4.0.0-beta.0-e49c7fa"
+    "rxjs": "^5.0.1",
+    "@angular/core": "4.0.0-beta.0-171a9bd",
+    "@angular/platform-browser": "4.0.0-beta.0-171a9bd"
   },
   "repository": {
     "type": "git",
