--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "2.4.0-6efdf84",
+  "version": "4.0.0-beta.0-1ee574c",
   "description": "Angular - the http service",
   "main": "bundles/http.umd.js",
   "module": "index.js",
@@ -9,8 +9,8 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "2.4.0-6efdf84",
-    "@angular/platform-browser": "2.4.0-6efdf84"
+    "@angular/core": "4.0.0-beta.0-1ee574c",
+    "@angular/platform-browser": "4.0.0-beta.0-1ee574c"
   },
   "repository": {
     "type": "git",
