--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "4.0.0-beta.4-9d8c467",
   "description": "Angular - the http service",
   "main": "bundles/http.umd.js",
   "module": "index.js",
@@ -9,8 +9,8 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "0.0.0-PLACEHOLDER",
-    "@angular/platform-browser": "0.0.0-PLACEHOLDER"
+    "@angular/core": "4.0.0-beta.4-9d8c467",
+    "@angular/platform-browser": "4.0.0-beta.4-9d8c467"
   },
   "repository": {
     "type": "git",
