--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@angular/http",
-  "version": "4.0.0-beta.8-bb0460b",
+  "version": "0.0.0-PLACEHOLDER",
   "description": "Angular - the http service",
-  "main": "bundles/http.umd.js",
-  "module": "index.js",
-  "typings": "index.d.ts",
+  "main": "./bundles/http.umd.js",
+  "module": "./@angular/http.es5.js",
+  "es2015": "./@angular/http.js",
+  "typings": "./typings/http.d.ts",
   "author": "angular",
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.0.0-beta.8-bb0460b",
-    "@angular/platform-browser": "4.0.0-beta.8-bb0460b"
+    "@angular/core": "0.0.0-PLACEHOLDER",
+    "@angular/platform-browser": "0.0.0-PLACEHOLDER"
   },
   "repository": {
     "type": "git",
