--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.0.0-beta.8-2602b03",
+  "version": "4.0.0-rc.1-c7d1b36",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -10,8 +10,8 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.0.0-beta.8-2602b03",
-    "@angular/platform-browser": "4.0.0-beta.8-2602b03"
+    "@angular/core": "4.0.0-rc.1-c7d1b36",
+    "@angular/platform-browser": "4.0.0-rc.1-c7d1b36"
   },
   "repository": {
     "type": "git",
