--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.0.0-rc.6-b800a0c",
+  "version": "4.0.0-7a715b2",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -10,8 +10,8 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.0.0-rc.6-b800a0c",
-    "@angular/platform-browser": "4.0.0-rc.6-b800a0c"
+    "@angular/core": "4.0.0-7a715b2",
+    "@angular/platform-browser": "4.0.0-7a715b2"
   },
   "repository": {
     "type": "git",
