--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.2.0-beta.1-f1a9e3c",
+  "version": "4.2.0-rc.0-3d382dc",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -10,8 +10,8 @@
   "license": "MIT",
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.2.0-beta.1-f1a9e3c",
-    "@angular/platform-browser": "4.2.0-beta.1-f1a9e3c"
+    "@angular/core": "4.2.0-rc.0-3d382dc",
+    "@angular/platform-browser": "4.2.0-rc.0-3d382dc"
   },
   "repository": {
     "type": "git",
