--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.2.0-rc.2-576d6d8",
+  "version": "4.2.0-cf0a9e0",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.2.0-rc.2-576d6d8",
-    "@angular/platform-browser": "4.2.0-rc.2-576d6d8"
+    "@angular/core": "4.2.0-cf0a9e0",
+    "@angular/platform-browser": "4.2.0-cf0a9e0"
   },
   "repository": {
     "type": "git",
