--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.2.2-02a38d3",
+  "version": "4.3.0-beta.0-1fc0d05",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.2.2-02a38d3",
-    "@angular/platform-browser": "4.2.2-02a38d3"
+    "@angular/core": "4.3.0-beta.0-1fc0d05",
+    "@angular/platform-browser": "4.3.0-beta.0-1fc0d05"
   },
   "repository": {
     "type": "git",
