--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.3.0-rc.0-e0fa727",
+  "version": "4.3.0-a0b06be",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.3.0-rc.0-e0fa727",
-    "@angular/platform-browser": "4.3.0-rc.0-e0fa727"
+    "@angular/core": "4.3.0-a0b06be",
+    "@angular/platform-browser": "4.3.0-a0b06be"
   },
   "repository": {
     "type": "git",
