--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.3.0-5344be5",
+  "version": "5.0.0-beta.0-54ea5b6",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.3.0-5344be5",
-    "@angular/platform-browser": "4.3.0-5344be5"
+    "@angular/core": "5.0.0-beta.0-54ea5b6",
+    "@angular/platform-browser": "5.0.0-beta.0-54ea5b6"
   },
   "repository": {
     "type": "git",
