--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.2.0-beta.0-4874765",
+  "version": "5.0.0-beta.4-d64c935",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -8,10 +8,13 @@
   "typings": "./http.d.ts",
   "author": "angular",
   "license": "MIT",
+  "dependencies": {
+    "tslib": "^1.7.1"
+  },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.2.0-beta.0-4874765",
-    "@angular/platform-browser": "4.2.0-beta.0-4874765"
+    "@angular/core": "5.0.0-beta.4-d64c935",
+    "@angular/platform-browser": "5.0.0-beta.4-d64c935"
   },
   "repository": {
     "type": "git",
