--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@angular/http",
-  "version": "5.0.0-beta.5-ee04217",
+  "version": "5.0.0-beta.5-fd701b0",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
-  "module": "./@angular/http.es5.js",
-  "es2015": "./@angular/http.js",
-  "typings": "./http.d.ts",
+  "module": "./esm5/index.js",
+  "es2015": "./esm15/index.js",
+  "typings": "./index.d.ts",
   "author": "angular",
   "license": "MIT",
   "dependencies": {
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "5.0.0-beta.5-ee04217",
-    "@angular/platform-browser": "5.0.0-beta.5-ee04217"
+    "@angular/core": "5.0.0-beta.5-fd701b0",
+    "@angular/platform-browser": "5.0.0-beta.5-fd701b0"
   },
   "repository": {
     "type": "git",
