--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "4.3.6-7d137d7",
+  "version": "4.4.0-RC.0-8036d05",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./@angular/http.es5.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.3.6-7d137d7",
-    "@angular/platform-browser": "4.3.6-7d137d7"
+    "@angular/core": "4.4.0-RC.0-8036d05",
+    "@angular/platform-browser": "4.4.0-RC.0-8036d05"
   },
   "repository": {
     "type": "git",
