--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "@angular/http",
-  "version": "4.1.0-beta.1-683e657",
+  "version": "5.0.0-beta.7-3215c4b",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
-  "module": "./@angular/http.es5.js",
-  "es2015": "./@angular/http.js",
-  "typings": "./http.d.ts",
+  "module": "./esm5/index.js",
+  "es2015": "./esm15/index.js",
+  "typings": "./index.d.ts",
   "author": "angular",
   "license": "MIT",
+  "dependencies": {
+    "tslib": "^1.7.1"
+  },
   "peerDependencies": {
     "rxjs": "^5.0.1",
-    "@angular/core": "4.1.0-beta.1-683e657",
-    "@angular/platform-browser": "4.1.0-beta.1-683e657"
+    "@angular/core": "5.0.0-beta.7-3215c4b",
+    "@angular/platform-browser": "5.0.0-beta.7-3215c4b"
   },
   "repository": {
     "type": "git",
