--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "5.1.0-beta.2-47addd1",
+  "version": "5.1.0-rc.0-60a3081",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "5.1.0-beta.2-47addd1",
-    "@angular/platform-browser": "5.1.0-beta.2-47addd1"
+    "@angular/core": "5.1.0-rc.0-60a3081",
+    "@angular/platform-browser": "5.1.0-rc.0-60a3081"
   },
   "repository": {
     "type": "git",
