--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@angular/http",
-  "version": "5.0.0-beta.7-3215c4b",
+  "version": "5.1.0-5a0076f",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
-  "module": "./esm5/index.js",
-  "es2015": "./esm15/index.js",
-  "typings": "./index.d.ts",
+  "module": "./esm5/http.js",
+  "es2015": "./esm2015/http.js",
+  "typings": "./http.d.ts",
   "author": "angular",
   "license": "MIT",
   "dependencies": {
     "tslib": "^1.7.1"
   },
   "peerDependencies": {
-    "rxjs": "^5.0.1",
-    "@angular/core": "5.0.0-beta.7-3215c4b",
-    "@angular/platform-browser": "5.0.0-beta.7-3215c4b"
+    "rxjs": "^5.5.0",
+    "@angular/core": "5.1.0-5a0076f",
+    "@angular/platform-browser": "5.1.0-5a0076f"
   },
   "repository": {
     "type": "git",
