--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "5.1.0-7671417",
+  "version": "5.2.0-beta.0-6e2a8a2",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "5.1.0-7671417",
-    "@angular/platform-browser": "5.1.0-7671417"
+    "@angular/core": "5.2.0-beta.0-6e2a8a2",
+    "@angular/platform-browser": "5.2.0-beta.0-6e2a8a2"
   },
   "repository": {
     "type": "git",
