--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "5.1.0-43868d2",
+  "version": "5.2.0-beta.0-057b357",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "5.1.0-43868d2",
-    "@angular/platform-browser": "5.1.0-43868d2"
+    "@angular/core": "5.2.0-beta.0-057b357",
+    "@angular/platform-browser": "5.2.0-beta.0-057b357"
   },
   "repository": {
     "type": "git",
