--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "5.2.0-rc.0-3db91ff",
+  "version": "5.2.0-04dd971",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "5.2.0-rc.0-3db91ff",
-    "@angular/platform-browser": "5.2.0-rc.0-3db91ff"
+    "@angular/core": "5.2.0-04dd971",
+    "@angular/platform-browser": "5.2.0-04dd971"
   },
   "repository": {
     "type": "git",
