--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "5.2.0-bb3b93c",
+  "version": "6.0.0-beta.0-8503cc1",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "5.2.0-bb3b93c",
-    "@angular/platform-browser": "5.2.0-bb3b93c"
+    "@angular/core": "6.0.0-beta.0-8503cc1",
+    "@angular/platform-browser": "6.0.0-beta.0-8503cc1"
   },
   "repository": {
     "type": "git",
