--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "5.9.9-6-beta.0-e4b11b2",
+  "version": "6.0.0-beta.1-d08785d",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "5.9.9-6-beta.0-e4b11b2",
-    "@angular/platform-browser": "5.9.9-6-beta.0-e4b11b2"
+    "@angular/core": "6.0.0-beta.1-d08785d",
+    "@angular/platform-browser": "6.0.0-beta.1-d08785d"
   },
   "repository": {
     "type": "git",
