--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-beta.5-9eaf1bb",
+  "version": "6.0.0-beta.5-288851c",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,11 +13,14 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "6.0.0-beta.5-9eaf1bb",
-    "@angular/platform-browser": "6.0.0-beta.5-9eaf1bb"
+    "@angular/core": "6.0.0-beta.5-288851c",
+    "@angular/platform-browser": "6.0.0-beta.5-288851c"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/angular/angular.git"
+  },
+  "ng-update": {
+    "packageGroup": ["core", "compiler", "common", "animations", "platform-browser", "platform-browser-dynamic", "forms", "http", "platform-server", "platform-webworker", "platform-webworker-dynamic", "upgrade", "router", "compiler-cli", "language-service", "benchpress", "service-worker"]
   }
 }
