--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-beta.7-0ebd577",
+  "version": "6.0.0-beta.7-44de10e",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./esm5/http.js",
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "rxjs": "^5.5.0",
-    "@angular/core": "6.0.0-beta.7-0ebd577",
-    "@angular/platform-browser": "6.0.0-beta.7-0ebd577"
+    "@angular/core": "6.0.0-beta.7-44de10e",
+    "@angular/platform-browser": "6.0.0-beta.7-44de10e"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,6 @@
   },
   "ng-update": {
     "packageGroup": ["@angular/core", "@angular/compiler", "@angular/common", "@angular/animations", "@angular/platform-browser", "@angular/platform-browser-dynamic", "@angular/forms", "@angular/http", "@angular/platform-server", "@angular/platform-webworker", "@angular/platform-webworker-dynamic", "@angular/upgrade", "@angular/router", "@angular/compiler-cli", "@angular/language-service", "@angular/benchpress", "@angular/service-worker"]
-  }
+  },
+  "sideEffects": false
 }
