--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-beta.7-2b3de63",
+  "version": "6.0.0-beta.7-4648597",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -16,9 +16,9 @@
     "tslib": "^1.9.0"
   },
   "peerDependencies": {
-    "rxjs": "^5.5.0",
-    "@angular/core": "6.0.0-beta.7-2b3de63",
-    "@angular/platform-browser": "6.0.0-beta.7-2b3de63"
+    "rxjs": "^6.0.0-alpha.3",
+    "@angular/core": "6.0.0-beta.7-4648597",
+    "@angular/platform-browser": "6.0.0-beta.7-4648597"
   },
   "repository": {
     "type": "git",
