--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-beta.7-623d769",
+  "version": "6.0.0-rc.0-73261a8",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -16,9 +16,9 @@
     "tslib": "^1.9.0"
   },
   "peerDependencies": {
-    "rxjs": "^6.0.0-alpha.3",
-    "@angular/core": "6.0.0-beta.7-623d769",
-    "@angular/platform-browser": "6.0.0-beta.7-623d769"
+    "rxjs": "^5.6.0-forward-compat.0 || ^6.0.0-beta.0",
+    "@angular/core": "6.0.0-rc.0-73261a8",
+    "@angular/platform-browser": "6.0.0-rc.0-73261a8"
   },
   "repository": {
     "type": "git",
