--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-rc.0-a5f0939",
+  "version": "6.0.0-rc.0-22cb2c9",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -16,9 +16,9 @@
     "tslib": "^1.9.0"
   },
   "peerDependencies": {
-    "rxjs": "^5.6.0-forward-compat.0 || ^6.0.0-beta.0",
-    "@angular/core": "6.0.0-rc.0-a5f0939",
-    "@angular/platform-browser": "6.0.0-rc.0-a5f0939"
+    "rxjs": "^6.0.0-beta.4",
+    "@angular/core": "6.0.0-rc.0-22cb2c9",
+    "@angular/platform-browser": "6.0.0-rc.0-22cb2c9"
   },
   "repository": {
     "type": "git",
