--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-rc.1-fa2c9a8",
+  "version": "6.0.0-rc.1-92724b3",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -16,9 +16,9 @@
     "tslib": "^1.9.0"
   },
   "peerDependencies": {
-    "rxjs": "^6.0.0-beta.4",
-    "@angular/core": "6.0.0-rc.1-fa2c9a8",
-    "@angular/platform-browser": "6.0.0-rc.1-fa2c9a8"
+    "rxjs": "^6.0.0-rc.0",
+    "@angular/core": "6.0.0-rc.1-92724b3",
+    "@angular/platform-browser": "6.0.0-rc.1-92724b3"
   },
   "repository": {
     "type": "git",
