--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-rc.5+120.sha-cccc328",
+  "version": "6.0.0-rc.5+121.sha-6601d0f",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -16,9 +16,9 @@
     "tslib": "^1.9.0"
   },
   "peerDependencies": {
-    "rxjs": "^6.0.0-rc.0",
-    "@angular/core": "6.0.0-rc.5+120.sha-cccc328",
-    "@angular/platform-browser": "6.0.0-rc.5+120.sha-cccc328"
+    "rxjs": "^6.0.0",
+    "@angular/core": "6.0.0-rc.5+121.sha-6601d0f",
+    "@angular/platform-browser": "6.0.0-rc.5+121.sha-6601d0f"
   },
   "repository": {
     "type": "git",
