a8f6542 release: cut the v6.0.2 release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.1+12.sha-c6b618d",
+  "version": "6.0.2",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -17,8 +17,8 @@
   },
   "peerDependencies": {
     "rxjs": "^6.0.0",
-    "@angular/core": "6.0.1+12.sha-c6b618d",
-    "@angular/platform-browser": "6.0.1+12.sha-c6b618d"
+    "@angular/core": "6.0.2",
+    "@angular/platform-browser": "6.0.2"
   },
   "repository": {
     "type": "git",
