--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.0-rc.5+335.sha-acf270d",
+  "version": "6.1.0-beta.0+11.sha-7de2ba0",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -17,8 +17,8 @@
   },
   "peerDependencies": {
     "rxjs": "^6.0.0",
-    "@angular/core": "6.0.0-rc.5+335.sha-acf270d",
-    "@angular/platform-browser": "6.0.0-rc.5+335.sha-acf270d"
+    "@angular/core": "6.1.0-beta.0+11.sha-7de2ba0",
+    "@angular/platform-browser": "6.1.0-beta.0+11.sha-7de2ba0"
   },
   "repository": {
     "type": "git",
