--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.4+22.sha-9a9a7de",
+  "version": "6.0.5",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -17,8 +17,8 @@
   },
   "peerDependencies": {
     "rxjs": "^6.0.0",
-    "@angular/core": "6.0.4+22.sha-9a9a7de",
-    "@angular/platform-browser": "6.0.4+22.sha-9a9a7de"
+    "@angular/core": "6.0.5",
+    "@angular/platform-browser": "6.0.5"
   },
   "repository": {
     "type": "git",
