def354d release: cut the v6.1.0-beta.2 release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.1.0-beta.1+43.sha-9782736",
+  "version": "6.1.0-beta.2",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -17,8 +17,8 @@
   },
   "peerDependencies": {
     "rxjs": "^6.0.0",
-    "@angular/core": "6.1.0-beta.1+43.sha-9782736",
-    "@angular/platform-browser": "6.1.0-beta.1+43.sha-9782736"
+    "@angular/core": "6.1.0-beta.2",
+    "@angular/platform-browser": "6.1.0-beta.2"
   },
   "repository": {
     "type": "git",
