--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.1.0-beta.2",
+  "version": "6.1.0-beta.2+3.sha-b91254f",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -17,8 +17,8 @@
   },
   "peerDependencies": {
     "rxjs": "^6.0.0",
-    "@angular/core": "6.1.0-beta.2",
-    "@angular/platform-browser": "6.1.0-beta.2"
+    "@angular/core": "6.1.0-beta.2+3.sha-b91254f",
+    "@angular/platform-browser": "6.1.0-beta.2+3.sha-b91254f"
   },
   "repository": {
     "type": "git",
