--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/http",
-  "version": "6.0.6",
+  "version": "6.0.6+1.sha-1f532aa",
   "description": "Angular - the http service",
   "main": "./bundles/http.umd.js",
   "module": "./fesm5/http.js",
@@ -17,8 +17,8 @@
   },
   "peerDependencies": {
     "rxjs": "^6.0.0",
-    "@angular/core": "6.0.6",
-    "@angular/platform-browser": "6.0.6"
+    "@angular/core": "6.0.6+1.sha-1f532aa",
+    "@angular/platform-browser": "6.0.6+1.sha-1f532aa"
   },
   "repository": {
     "type": "git",
